--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Installing PHP...
-        run: sudo apt install php libapache2-mod-php
+        run: |
+          sudo add-apt-repository ppa:ondrej/php
+          sudo apt update
+          sudo apt install php8.3 php8.3-cli php8.3-{bz2,curl,mbstring,intl}
+          sudo apt install php8.3-fpm
+          sudo a2enconf php8.3-fpm
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Installing Composer...
