--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,7 @@ jobs:
           sudo apt update
           sudo apt install php8.3 php8.3-cli php8.3-{bz2,curl,mbstring,intl}
           sudo apt install php8.3-fpm
+          sudo apt-get install php8.3-xml
           sudo a2enconf php8.3-fpm
       - name: Check out repository code
         uses: actions/checkout@v4
