--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,13 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Installing PHP...
-        run: |
-          sudo add-apt-repository ppa:ondrej/php
-          sudo apt update
-          sudo apt install php8.3 php8.3-cli php8.3-{bz2,curl,mbstring,intl}
-          sudo apt install php8.3-fpm
-          sudo apt-get install php8.3-xml
-          sudo a2enconf php8.3-fpm
+        uses: shivammathur/setup-php@v2
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Installing Composer...
