--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,19 +5,23 @@ jobs:
   Run-PHPUnit:
     runs-on: ubuntu-latest
     steps:
-      - name: Installing PHP...
-        uses: shivammathur/setup-php@v2
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Installing Composer...
-        run: |
-          php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-          php -r "if (hash_file('sha384', 'composer-setup.php') === 'dac665fdc30fdd8ec78b38b9800061b4150413ff2e3b6f88543c636f7cd84f6db9189d43a81e5503cda447da73c7e5b6') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-          php composer-setup.php
-          php -r "unlink('composer-setup.php');"
-      - name: Installing Composer Packages...
-        run: |
-          ./composer.phar install
+      - name: Installing PHP...
+        uses: shivammathur/setup-php@v2
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        run: composer install --prefer-dist
       - name: Run PHPUnit Tests
         run: |
           ./vendor/bin/phpunit tests/
