Add PHPStan job

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,4 +25,27 @@ jobs:
       - name: Run PHPUnit Tests
         run: |
           ./vendor/bin/phpunit tests/
-      - run: echo "Tests sucessfully executed!"
+  Run-PHPStan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Installing PHP...
+        uses: shivammathur/setup-php@v2
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        run: composer install --prefer-dist
+      - name: Run PHPStan
+        run: |
+          ./vendor/bin/phpstan analyse -c phpstan.neon
+
