--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,13 @@ run-name: Running Tests
 on: [push]
 jobs:
   PHP-83:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
+
+    strategy:
+      matrix:
+        operating-system: ['ubuntu-latest', 'windows-latest', 'macos-latest']
+        php-versions: ['8.2', '8.3']
+
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
@@ -11,40 +17,7 @@ jobs:
       - name: Installing PHP...
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
-
-      - name: Get composer cache directory
-        id: composer-cache
-        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
-
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: ${{ runner.os }}-composer-
-
-      - name: Install dependencies
-        run: composer install --prefer-dist
-
-      - name: Run PHPUnit Tests
-        run: |
-          ./vendor/bin/phpunit tests/
-
-      - name: Run PHPStan
-        run: |
-          ./vendor/bin/phpstan analyse -c phpstan.neon
-
-  PHP-82:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
-      - name: Installing PHP...
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
+          php-version: ${{ matrix.php-versions }}
 
       - name: Get composer cache directory
         id: composer-cache
