--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,8 +7,8 @@ jobs:
 
     strategy:
       matrix:
-        operating-system: ['ubuntu-latest', 'windows-latest', 'macos-latest']
-        php-versions: ['8.1', '8.2', '8.3']
+        operating-system: ['ubuntu-latest']
+        php-versions: ['8.2', '8.3']
         phpunit-versions: ['latest']
         include:
           - operating-system: 'ubuntu-latest'
